add section prices

--- a/src/html/section-advert.html
+++ b/src/html/section-advert.html
@@ -18,7 +18,7 @@
               molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.
             </p>
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-sm-6">
                 <ul class="description__list">
                   <li class="description__item">Stunning on all screens</li>
                   <li class="description__item">Easy to customize</li>
@@ -27,7 +27,7 @@
                   <li class="description__item">Unlimited possibilities</li>
                 </ul>
               </div>
-              <div class="col-6">
+              <div class="col-12 col-sm-6">
                 <ul class="description__list">
                   <li class="description__item">Remarkable style</li>
                   <li class="description__item">Captivating presentations</li>
@@ -44,79 +44,52 @@
         </div>
       </div>
     </div>
-    <!-- <div class="card-deck">
-      <div class="card border-0 align-items-center">
-        <img class="card-img" src="@img/pulse.png" alt="Keep pulse going">
-        <div class="card-body">
-          <h4 class="card-title">KEEP PULSE GOING</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .</p>
+
+    <div>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="advantage">
+            <img class="img-responsive mb-5" src="@img/pulse.png" alt="Keep pulse going">
+            <h4 class="advantage__title">
+              KEEP PULSE GOING
+            </h4>
+            <p class="advantage__lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card border-0 align-items-center">
-        <img class="card-img" src="@img/limits.png" alt="Pass the limits">
-        <div class="card-body">
-          <h4 class="card-title">Pass the limits</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .</p>
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="advantage">
+            <img class="img-responsive mb-5" src="@img/limits.png" alt="Pass the limits">
+            <h4 class="advantage__title">
+              PASS THE LIMITS
+            </h4>
+            <p class="advantage__lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card border-0 align-items-center">
-        <img class="card-img" src="@img/ideas.png" alt="Great ideas">
-        <div class="card-body">
-          <h4 class="card-title">Great ideas</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .</p>
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="advantage">
+            <img class="img-responsive mb-5" src="@img/ideas.png" alt="Great ideas">
+            <h4 class="advantage__title">
+              GREAT IDEAS
+            </h4>
+            <p class="advantage__lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="card border-0 align-items-center">
-        <img class="card-img" src="@img/support.png" alt="Awesome support">
-        <div class="card-body">
-          <h4 class="card-title">Awesome support</h4>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .</p>
-        </div>
-      </div>
-    </div> -->
-    <div class="row">
-      <div class="col-12 col-sm-6 col-md-3">
-        <div class="advantage">
-          <img class="img-responsive mb-5" src="@img/pulse.png" alt="Keep pulse going">
-          <h4 class="advantage__title">
-            KEEP PULSE GOING
-          </h4>
-          <p class="advantage__lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
-          </p>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <div class="advantage">
-          <img class="img-responsive mb-5" src="@img/limits.png" alt="Pass the limits">
-          <h4 class="advantage__title">
-            PASS THE LIMITS
-          </h4>
-          <p class="advantage__lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
-          </p>
-        </div>
-      </div>
-      <div class="col col-12-sm-6 col-md-3">
-        <div class="advantage">
-          <img class="img-responsive mb-5" src="@img/ideas.png" alt="Great ideas">
-          <h4 class="advantage__title">
-            GREAT IDEAS
-          </h4>
-          <p class="advantage__lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
-          </p>
-        </div>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <div class="advantage">
-          <img class="img-responsive  mb-5" src="@img/support.png" alt="Awesome support">
-          <h4 class="advantage__title">
-            AWESOME SUPPORT
-          </h4>
-          <p class="advantage__lead">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
-          </p>
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="advantage">
+            <img class="img-responsive  mb-5" src="@img/support.png" alt="Awesome support">
+            <h4 class="advantage__title">
+              AWESOME SUPPORT
+            </h4>
+            <p class="advantage__lead">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt .
+            </p>
+          </div>
         </div>
       </div>
     </div>
