--- a/src/html/section-prices.html
+++ b/src/html/section-prices.html
@@ -1,31 +1,68 @@
 <section class="section-prices">
    <div class="container">
       <h2 class="section-prices__title">Pricing plans</h2>
-      <p class="section-prices__lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <div class="card-deck">
-         <a class="card">
-           <div class="card-body">
-             <h4 class="card-title">Basic</h4>
-             <p class="card-text"></p>
-           </div>
+      <p class="section-prices__lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+         incididunt ut labore et dolore magna aliqua.</p>
 
-         </a>
-         <div class="card">
-           <div class="card-body">
-             <h4 class="card-title">Advanced</h4>
-             <p class="card-text"></p>
-           </div>
-           
+      <div>
+         <div class="row">
+            <div class="col-12 col-sm-6 col-lg-4">
+               <a class="price-card">
+                  <h4 class="price-card__title">
+                     Basic
+                  </h4>
+                  <p class="price-card__price">
+                     $35.99 Monthly
+                  </p>
+                  <ul class="price-card__list">
+                     <li class="price-card__item">Lorem ipsum dolor sit amet</li>
+                     <li class="price-card__item">Consectetuer adipiscing elit</li>
+                     <li class="price-card__item">Sed diam nonummy</li>
+                     <li class="price-card__item">Nibh euismod tincidunt</li>
+                     <li class="price-card__item">Ut laoreet dolore</li>
+                     <li class="price-card__item">Magna aliquam erat volutpat</li>
+                   </ul>
+                   <button class="btn btn-success">Get Started</button>
+               </a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+               <a class="price-card">
+                  <h4 class="price-card__title">
+                    Advanced
+                  </h4>
+                  <p class="price-card__price">
+                     $75.99 Monthly
+                  </p>
+                  <ul class="price-card__list">
+                     <li class="price-card__item">Lorem ipsum dolor sit amet</li>
+                     <li class="price-card__item">Consectetuer adipiscing elit</li>
+                     <li class="price-card__item">Sed diam nonummy</li>
+                     <li class="price-card__item">Nibh euismod tincidunt</li>
+                     <li class="price-card__item">Ut laoreet dolore</li>
+                     <li class="price-card__item">Magna aliquam erat volutpat</li>
+                   </ul>
+                   <button class="btn btn-success">Get Started</button>
+               </a>
+            </div>
+            <div class="col-12 col-sm-6 m-sm-auto col-lg-4">
+               <a class="price-card">
+                  <h4 class="price-card__title">
+                     Smart
+                  </h4>
+                  <p class="price-card__price">
+                     $75.99 Monthly
+                  </p>
+                  <ul class="price-card__list">
+                     <li class="price-card__item">Lorem ipsum dolor sit amet</li>
+                     <li class="price-card__item">Consectetuer adipiscing elit</li>
+                     <li class="price-card__item">Sed diam nonummy</li>
+                     <li class="price-card__item">Nibh euismod tincidunt</li>
+                     <li class="price-card__item">Ut laoreet dolore</li>
+                     <li class="price-card__item">Magna aliquam erat volutpat</li>
+                   </ul>
+                   <button class="btn btn-success">Get Started</button>
+               </a>
+            </div>
          </div>
-         <div class="card">
-           <div class="card-body">
-             <h4 class="card-title">Smart</h4>
-             <p class="card-text"></p>
-           </div>
-           <div class="card-footer border-0">
-             
-           </div>
-         </div>
-       </div>
-   </div>
+      </div>
 </section>
